@@ -39,105 +39,4 @@
 #include "global.h" 
 /* purely to get at build settings */
 
-#if 0
-#include <ttree.h>
-
-void
-convert_libxml_to_ttree_node_list(TTREE *tt, xmlNodePtr node);
-
-TTREE*
-convert_libxml_to_ttree_node(TTREE *tt, xmlNodePtr node)
-{
-	TTREE* new_tt = NULL;
-
-	if (node == NULL) {
-		return NULL;
-	}
-
-	switch (node->type) {
-	case XML_ELEMENT_NODE:
-		{
-			TTREE *node_name;
-			/* Create TTREE for element: */
-			new_tt = ttree_node_add(tt, "tag_span", 8);
-			node_name = ttree_node_add(new_tt, 
-						   node->name,
-						   strlen(node->name));
-			
-			/* Add attributes */
-			if (node->properties != NULL) {
-				xmlAttrPtr attr = node->properties;
-				
-				while (attr != NULL) {
-					TTREE *node_cur = ttree_node_add(node_name, "attr", 4);
-					node_cur = ttree_node_add(node_cur, 
-								  attr->name,
-								  strlen(attr->name));
-					
-					if (attr->children != NULL) {
-						g_assert(attr->children->type==XML_TEXT_NODE);
-						
-						ttree_node_add(node_cur, attr->children->content, strlen(attr->children->content));
-					}     
-					
-					attr = attr->next;
-				}
-			}
-			
-			/* Recursively process children */
-			if ((node->children != NULL) && (node->type != XML_ENTITY_REF_NODE)) {
-				convert_libxml_to_ttree_node_list(node_name, node->children);
-			}
-		}
-		break;
-		
-	case XML_TEXT_NODE:
-		{
-			if (node->content != NULL) {
-				new_tt = ttree_node_add(tt, "data", 4);
-				ttree_node_add(new_tt, node->content, strlen(node->content));
-			}
-		}
-		break;
-		
-	case XML_COMMENT_NODE:
-		{
-			if (node->content != NULL) {
-				new_tt = ttree_node_add(tt, "comment", 7);
-				ttree_node_add(new_tt, node->content, strlen(node->content));
-			}
-		}
-		break;
-		
-	default:
-	}
-
-	return new_tt;
-}
-
-void
-convert_libxml_to_ttree_node_list(TTREE *tt, xmlNodePtr node)
-{
-	while (node != NULL) {
-		convert_libxml_to_ttree_node(tt, node);
-		node = node->next;
-	}
-}
-
-TTREE*
-convert_libxml_to_ttree_doc(xmlDocPtr doc)
-{
-	TTREE *node_root = NULL;
-	if (doc == NULL) {
-		return NULL;
-	}
-	
-	if (((doc->type == XML_DOCUMENT_NODE) ||
-	     (doc->type == XML_HTML_DOCUMENT_NODE)) && (doc->children != NULL)) {
-		node_root = ttree_node_add(NULL, "xml", 3);
-		convert_libxml_to_ttree_node_list(node_root, doc->children);
-	}
-	
-	return node_root;
-}
-#endif
+/* This is dead code */
